; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mediatek/extr_mtk_eth_soc.c_mtk_mdio_busy_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mediatek/extr_mtk_eth_soc.c_mtk_mdio_busy_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_eth = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@MTK_PHY_IAC = common dso_local global i32 0, align 4
@PHY_IAC_ACCESS = common dso_local global i32 0, align 4
@PHY_IAC_TIMEOUT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i8] c"mdio: MDIO timeout\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtk_eth*)* @mtk_mdio_busy_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_mdio_busy_wait(%struct.mtk_eth* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mtk_eth*, align 8
  %4 = alloca i64, align 8
  store %struct.mtk_eth* %0, %struct.mtk_eth** %3, align 8
  %5 = load i64, i64* @jiffies, align 8
  store i64 %5, i64* %4, align 8
  br label %6

6:                                                ; preds = %1, %22
  %7 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %8 = load i32, i32* @MTK_PHY_IAC, align 4
  %9 = call i32 @mtk_r32(%struct.mtk_eth* %7, i32 %8)
  %10 = load i32, i32* @PHY_IAC_ACCESS, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %6
  store i32 0, i32* %2, align 4
  br label %29

14:                                               ; preds = %6
  %15 = load i64, i64* @jiffies, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @PHY_IAC_TIMEOUT, align 8
  %18 = add i64 %16, %17
  %19 = call i64 @time_after(i64 %15, i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  br label %24

22:                                               ; preds = %14
  %23 = call i32 @usleep_range(i32 10, i32 20)
  br label %6

24:                                               ; preds = %21
  %25 = load %struct.mtk_eth*, %struct.mtk_eth** %3, align 8
  %26 = getelementptr inbounds %struct.mtk_eth, %struct.mtk_eth* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @dev_err(i32 %27, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %24, %13
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @mtk_r32(%struct.mtk_eth*, i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
